Page overflow fixed

--- a/src/Pages/Connellow/index.scss
+++ b/src/Pages/Connellow/index.scss
@@ -1,6 +1,9 @@
 html, body {
     overflow: auto;
 }
+#stage {
+    overflow: hidden;
+}
 .game-title-body {
     position: absolute;
     width: 100%;
